# tinycar_lib

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py  tccp.cpp  tccp.hpp  tcfp.cpp  tcfp.hpp  tinycar.cpp  tinycar.hpp
examples/cpp/: CMakeLists.txt  main.cpp
examples/python/: main.py
tinycar_python/: ndarray_converter.cpp  ndarray_converter.h  tinycar_pybindings.cpp
